// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resume > renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="_wrapper_c6a955"
  >
    <header>
      <h1
        class="_name_c6a955"
      >
        Jean Luis Urena
      </h1>
      <p
        class="_contact_c6a955"
      >
        New York, NY · eljean@live.com · 
        <a
          href="https://jlurena.me"
        >
          jlurena.me
        </a>
         · 
        <a
          href="https://github.com/jlurena"
        >
          github.com/jlurena
        </a>
      </p>
    </header>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Summary
      </h2>
      <p>
        Sr. Software Engineering Manager with 10+ years of experience, promoted 4 times at Teladoc Health from Associate Engineer to Sr. Manager. Scaled an engineering org from 3 to 18+, led teams through ~80x traffic growth, and delivered an $18M annualized revenue lift from a registration redesign. Champion of AI-augmented engineering (Claude Code, Copilot, Rovo) to raise team velocity and code quality.

      </p>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Experience
      </h2>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Teladoc Health
          </span>
        </div>
        <p
          class="_experienceNote_c6a955"
        >
          Promoted 4 times in 8 years, from Associate Software Engineer to Sr. Manager.
        </p>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Sr. Manager, Software Engineering
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2026 – Present
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Lead an 18+ person engineering org across multiple product areas: 10 direct reports (2 engineering managers and 8 engineers) plus their teams. Own architecture, delivery, and roadmap trade-offs; mentor managers and senior engineers; partner with Product and Business to align technology decisions to outcomes.
            </li>
            <li>
              Led implementation and launch of the redesigned Teladoc Health user registration experience, increasing conversion 12% (+$18M annualized revenue).
            </li>
            <li>
              Grew the org from 8 to 18+ people through 4 external hires and absorbing teams in re-orgs.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Software Engineering Manager
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2022 – 03/2026
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Grew the team from 3 to 8 engineers.
            </li>
            <li>
              Extended member accounts from one account per payer to one account across many payers, so ~25% of members keep a single login; retired duplicate authentication systems.
            </li>
            <li>
              Cut eligibility lookup time by 50% by introducing a more reliable caching system.
            </li>
            <li>
              Modernized a legacy system that was causing reputational damage and financial losses, rebuilding it to auto-scale and perform reliably, and cutting support tickets requiring engineering or technical support by ~40%.
            </li>
            <li>
              Led team-wide adoption of Claude Code, GitHub Copilot, and Atlassian Rovo, including custom internal plugins/skills built for team workflows; team consistently met tight delivery deadlines.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Senior Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2021 – 03/2022
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Cut private-label client onboarding from 4–6 months to 2 months by leading the team that eliminated boilerplate in the shared codebase.
            </li>
            <li>
              Grew junior engineers into their roles by mentoring them through the intern program.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2020 – 03/2021
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Led teams through ~80x COVID-19 traffic growth with software and system optimizations and auto-scaling service design.
            </li>
            <li>
              Introduced code standards and conventions that the department later adopted.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Associate Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              01/2018 – 03/2020
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Sped up project delivery by helping migrate Member web from Rails templates to React.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Technical Instructor
          </span>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Flatiron School
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              02/2025 – Present
            </span>
          </div>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              NuCamp Bootcamp
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              02/2022 – 02/2024
            </span>
          </div>
        </div>
        <p>
          Teach software engineering to cohorts of up to 5 adult career-changers; mentor 1:1 on code review and career readiness, including effective use of AI coding assistants.

        </p>
      </div>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Research Foundation City University of New York
          </span>
        </div>
        <p>
          Teaching Assistant, RF CUNY Coding Bootcamp (2023): supported 20 students and graded assignments.

        </p>
      </div>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Education
      </h2>
      <div
        class="_experienceRow_c6a955"
      >
        <span>
          Rochester Institute of Technology, M.S. in Business Analytics and AI
        </span>
        <span
          class="_experienceDates_c6a955"
        >
          Expected 2028
        </span>
      </div>
      <div
        class="_experienceRow_c6a955"
      >
        <span>
          Rochester Institute of Technology, B.S. in Computer Science
        </span>
        <span
          class="_experienceDates_c6a955"
        >
          2018
        </span>
      </div>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Skills
      </h2>
      <ul
        class="_skillsList_c6a955"
      >
        <li>
          <strong>
            Leadership & People Management
          </strong>
          : Org leadership (18+ person org, incl. 2 managers), Hiring & performance management, Mentorship & coaching, Org scaling
        </li>
        <li>
          <strong>
            AI-Augmented Engineering Leadership
          </strong>
          : Claude Code, GitHub Copilot, Atlassian Rovo, Custom AI plugin/skill development, Team AI-adoption strategy
        </li>
        <li>
          <strong>
            Engineering Background
          </strong>
          : Java, JavaScript, Python, Ruby, Scala · React, Node.js, Rails · AWS, Azure · PostgreSQL, MySQL, Elasticsearch, Redis
        </li>
        <li>
          <strong>
            Technical Program Management
          </strong>
          : Cross-functional delivery, Roadmap planning, Agile/Scrum
        </li>
        <li>
          <strong>
            Technical Strategy & Architecture
          </strong>
          : System design oversight, Code quality standards, Technical due diligence
        </li>
        <li>
          <strong>
            Fluent in Spanish
          </strong>
        </li>
      </ul>
    </section>
    <div
      class="_resumeFooter_c6a955"
    >
      <div
        class="_container_1af848"
      >
        <a
          aria-label="Open in new tab"
          href="http://localhost:3000/?resumeOnly=true"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-from-square"
            data-icon="up-right-from-square"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M290.4 19.8C295.4 7.8 307.1 0 320 0L480 0c17.7 0 32 14.3 32 32l0 160c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9L400 157.3 246.6 310.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L354.7 112 297.4 54.6c-9.2-9.2-11.9-22.9-6.9-34.9zM0 176c0-44.2 35.8-80 80-80l80 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-80 0c-8.8 0-16 7.2-16 16l0 256c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16l0-80c0-17.7 14.3-32 32-32s32 14.3 32 32l0 80c0 44.2-35.8 80-80 80L80 512c-44.2 0-80-35.8-80-80L0 176z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Resume > renders with resumeOnly=true in URL and matches snapshot 1`] = `
<div>
  <div
    class="_wrapper_c6a955"
  >
    <header>
      <h1
        class="_name_c6a955"
      >
        Jean Luis Urena
      </h1>
      <p
        class="_contact_c6a955"
      >
        New York, NY · eljean@live.com · 
        <a
          href="https://jlurena.me"
        >
          jlurena.me
        </a>
         · 
        <a
          href="https://github.com/jlurena"
        >
          github.com/jlurena
        </a>
      </p>
    </header>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Summary
      </h2>
      <p>
        Sr. Software Engineering Manager with 10+ years of experience, promoted 4 times at Teladoc Health from Associate Engineer to Sr. Manager. Scaled an engineering org from 3 to 18+, led teams through ~80x traffic growth, and delivered an $18M annualized revenue lift from a registration redesign. Champion of AI-augmented engineering (Claude Code, Copilot, Rovo) to raise team velocity and code quality.

      </p>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Experience
      </h2>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Teladoc Health
          </span>
        </div>
        <p
          class="_experienceNote_c6a955"
        >
          Promoted 4 times in 8 years, from Associate Software Engineer to Sr. Manager.
        </p>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Sr. Manager, Software Engineering
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2026 – Present
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Lead an 18+ person engineering org across multiple product areas: 10 direct reports (2 engineering managers and 8 engineers) plus their teams. Own architecture, delivery, and roadmap trade-offs; mentor managers and senior engineers; partner with Product and Business to align technology decisions to outcomes.
            </li>
            <li>
              Led implementation and launch of the redesigned Teladoc Health user registration experience, increasing conversion 12% (+$18M annualized revenue).
            </li>
            <li>
              Grew the org from 8 to 18+ people through 4 external hires and absorbing teams in re-orgs.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Software Engineering Manager
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2022 – 03/2026
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Grew the team from 3 to 8 engineers.
            </li>
            <li>
              Extended member accounts from one account per payer to one account across many payers, so ~25% of members keep a single login; retired duplicate authentication systems.
            </li>
            <li>
              Cut eligibility lookup time by 50% by introducing a more reliable caching system.
            </li>
            <li>
              Modernized a legacy system that was causing reputational damage and financial losses, rebuilding it to auto-scale and perform reliably, and cutting support tickets requiring engineering or technical support by ~40%.
            </li>
            <li>
              Led team-wide adoption of Claude Code, GitHub Copilot, and Atlassian Rovo, including custom internal plugins/skills built for team workflows; team consistently met tight delivery deadlines.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Senior Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2021 – 03/2022
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Cut private-label client onboarding from 4–6 months to 2 months by leading the team that eliminated boilerplate in the shared codebase.
            </li>
            <li>
              Grew junior engineers into their roles by mentoring them through the intern program.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2020 – 03/2021
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Led teams through ~80x COVID-19 traffic growth with software and system optimizations and auto-scaling service design.
            </li>
            <li>
              Introduced code standards and conventions that the department later adopted.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Associate Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              01/2018 – 03/2020
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Sped up project delivery by helping migrate Member web from Rails templates to React.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Technical Instructor
          </span>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Flatiron School
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              02/2025 – Present
            </span>
          </div>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              NuCamp Bootcamp
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              02/2022 – 02/2024
            </span>
          </div>
        </div>
        <p>
          Teach software engineering to cohorts of up to 5 adult career-changers; mentor 1:1 on code review and career readiness, including effective use of AI coding assistants.

        </p>
      </div>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Research Foundation City University of New York
          </span>
        </div>
        <p>
          Teaching Assistant, RF CUNY Coding Bootcamp (2023): supported 20 students and graded assignments.

        </p>
      </div>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Education
      </h2>
      <div
        class="_experienceRow_c6a955"
      >
        <span>
          Rochester Institute of Technology, M.S. in Business Analytics and AI
        </span>
        <span
          class="_experienceDates_c6a955"
        >
          Expected 2028
        </span>
      </div>
      <div
        class="_experienceRow_c6a955"
      >
        <span>
          Rochester Institute of Technology, B.S. in Computer Science
        </span>
        <span
          class="_experienceDates_c6a955"
        >
          2018
        </span>
      </div>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Skills
      </h2>
      <ul
        class="_skillsList_c6a955"
      >
        <li>
          <strong>
            Leadership & People Management
          </strong>
          : Org leadership (18+ person org, incl. 2 managers), Hiring & performance management, Mentorship & coaching, Org scaling
        </li>
        <li>
          <strong>
            AI-Augmented Engineering Leadership
          </strong>
          : Claude Code, GitHub Copilot, Atlassian Rovo, Custom AI plugin/skill development, Team AI-adoption strategy
        </li>
        <li>
          <strong>
            Engineering Background
          </strong>
          : Java, JavaScript, Python, Ruby, Scala · React, Node.js, Rails · AWS, Azure · PostgreSQL, MySQL, Elasticsearch, Redis
        </li>
        <li>
          <strong>
            Technical Program Management
          </strong>
          : Cross-functional delivery, Roadmap planning, Agile/Scrum
        </li>
        <li>
          <strong>
            Technical Strategy & Architecture
          </strong>
          : System design oversight, Code quality standards, Technical due diligence
        </li>
        <li>
          <strong>
            Fluent in Spanish
          </strong>
        </li>
      </ul>
    </section>
    <div
      class="_resumeFooter_c6a955"
    >
      <div
        class="_container_1af848"
      >
        <a
          aria-label="Open in new tab"
          href="http://localhost/?resumeOnly=true"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-from-square"
            data-icon="up-right-from-square"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M290.4 19.8C295.4 7.8 307.1 0 320 0L480 0c17.7 0 32 14.3 32 32l0 160c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9L400 157.3 246.6 310.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L354.7 112 297.4 54.6c-9.2-9.2-11.9-22.9-6.9-34.9zM0 176c0-44.2 35.8-80 80-80l80 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-80 0c-8.8 0-16 7.2-16 16l0 256c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16l0-80c0-17.7 14.3-32 32-32s32 14.3 32 32l0 80c0 44.2-35.8 80-80 80L80 512c-44.2 0-80-35.8-80-80L0 176z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Resume > renders with showPrintButton=true and matches snapshot 1`] = `
<div>
  <div
    class="_wrapper_c6a955"
  >
    <header>
      <h1
        class="_name_c6a955"
      >
        Jean Luis Urena
      </h1>
      <p
        class="_contact_c6a955"
      >
        New York, NY · eljean@live.com · 
        <a
          href="https://jlurena.me"
        >
          jlurena.me
        </a>
         · 
        <a
          href="https://github.com/jlurena"
        >
          github.com/jlurena
        </a>
      </p>
    </header>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Summary
      </h2>
      <p>
        Sr. Software Engineering Manager with 10+ years of experience, promoted 4 times at Teladoc Health from Associate Engineer to Sr. Manager. Scaled an engineering org from 3 to 18+, led teams through ~80x traffic growth, and delivered an $18M annualized revenue lift from a registration redesign. Champion of AI-augmented engineering (Claude Code, Copilot, Rovo) to raise team velocity and code quality.

      </p>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Experience
      </h2>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Teladoc Health
          </span>
        </div>
        <p
          class="_experienceNote_c6a955"
        >
          Promoted 4 times in 8 years, from Associate Software Engineer to Sr. Manager.
        </p>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Sr. Manager, Software Engineering
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2026 – Present
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Lead an 18+ person engineering org across multiple product areas: 10 direct reports (2 engineering managers and 8 engineers) plus their teams. Own architecture, delivery, and roadmap trade-offs; mentor managers and senior engineers; partner with Product and Business to align technology decisions to outcomes.
            </li>
            <li>
              Led implementation and launch of the redesigned Teladoc Health user registration experience, increasing conversion 12% (+$18M annualized revenue).
            </li>
            <li>
              Grew the org from 8 to 18+ people through 4 external hires and absorbing teams in re-orgs.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Software Engineering Manager
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2022 – 03/2026
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Grew the team from 3 to 8 engineers.
            </li>
            <li>
              Extended member accounts from one account per payer to one account across many payers, so ~25% of members keep a single login; retired duplicate authentication systems.
            </li>
            <li>
              Cut eligibility lookup time by 50% by introducing a more reliable caching system.
            </li>
            <li>
              Modernized a legacy system that was causing reputational damage and financial losses, rebuilding it to auto-scale and perform reliably, and cutting support tickets requiring engineering or technical support by ~40%.
            </li>
            <li>
              Led team-wide adoption of Claude Code, GitHub Copilot, and Atlassian Rovo, including custom internal plugins/skills built for team workflows; team consistently met tight delivery deadlines.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Senior Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2021 – 03/2022
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Cut private-label client onboarding from 4–6 months to 2 months by leading the team that eliminated boilerplate in the shared codebase.
            </li>
            <li>
              Grew junior engineers into their roles by mentoring them through the intern program.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              03/2020 – 03/2021
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Led teams through ~80x COVID-19 traffic growth with software and system optimizations and auto-scaling service design.
            </li>
            <li>
              Introduced code standards and conventions that the department later adopted.
            </li>
          </ul>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Associate Software Engineer
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              01/2018 – 03/2020
            </span>
          </div>
          <ul
            class="_accomplishmentList_c6a955"
          >
            <li>
              Sped up project delivery by helping migrate Member web from Rails templates to React.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Technical Instructor
          </span>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              Flatiron School
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              02/2025 – Present
            </span>
          </div>
        </div>
        <div
          class="_titleBlock_c6a955"
        >
          <div
            class="_experienceRow_c6a955"
          >
            <span>
              NuCamp Bootcamp
            </span>
            <span
              class="_experienceDates_c6a955"
            >
              02/2022 – 02/2024
            </span>
          </div>
        </div>
        <p>
          Teach software engineering to cohorts of up to 5 adult career-changers; mentor 1:1 on code review and career readiness, including effective use of AI coding assistants.

        </p>
      </div>
      <div
        class="_experience_c6a955"
      >
        <div
          class="_experienceRow_c6a955"
        >
          <span>
            Research Foundation City University of New York
          </span>
        </div>
        <p>
          Teaching Assistant, RF CUNY Coding Bootcamp (2023): supported 20 students and graded assignments.

        </p>
      </div>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Education
      </h2>
      <div
        class="_experienceRow_c6a955"
      >
        <span>
          Rochester Institute of Technology, M.S. in Business Analytics and AI
        </span>
        <span
          class="_experienceDates_c6a955"
        >
          Expected 2028
        </span>
      </div>
      <div
        class="_experienceRow_c6a955"
      >
        <span>
          Rochester Institute of Technology, B.S. in Computer Science
        </span>
        <span
          class="_experienceDates_c6a955"
        >
          2018
        </span>
      </div>
    </section>
    <section
      class="_section_c6a955"
    >
      <h2
        class="_sectionHeader_c6a955"
      >
        Skills
      </h2>
      <ul
        class="_skillsList_c6a955"
      >
        <li>
          <strong>
            Leadership & People Management
          </strong>
          : Org leadership (18+ person org, incl. 2 managers), Hiring & performance management, Mentorship & coaching, Org scaling
        </li>
        <li>
          <strong>
            AI-Augmented Engineering Leadership
          </strong>
          : Claude Code, GitHub Copilot, Atlassian Rovo, Custom AI plugin/skill development, Team AI-adoption strategy
        </li>
        <li>
          <strong>
            Engineering Background
          </strong>
          : Java, JavaScript, Python, Ruby, Scala · React, Node.js, Rails · AWS, Azure · PostgreSQL, MySQL, Elasticsearch, Redis
        </li>
        <li>
          <strong>
            Technical Program Management
          </strong>
          : Cross-functional delivery, Roadmap planning, Agile/Scrum
        </li>
        <li>
          <strong>
            Technical Strategy & Architecture
          </strong>
          : System design oversight, Code quality standards, Technical due diligence
        </li>
        <li>
          <strong>
            Fluent in Spanish
          </strong>
        </li>
      </ul>
    </section>
    <div
      class="_resumeFooter_c6a955"
    >
      <button
        class=" _btn_9c2c4d"
        type="button"
      >
        Print
      </button>
    </div>
  </div>
</div>
`;
